--- a/Paper/document.tex
+++ b/Paper/document.tex
@@ -95,7 +95,7 @@ handwritten communication using custom gestures\cite{lyddane_donald_united_2006}
 Inspired by this problem of gesture recognition, we focused our efforts on a
 similar problem with common features. Our problem is recognition of a unistroke
 gesture sequence, defined as a continuous stroke (unistroke) consisting of
-multiple gestures defined \textit{a priori} (see Figure 1). In our opinion, this
+multiple gestures defined \textit{a priori} (see Figure 2). In our opinion, this
 problem description is analogous to identifying known gang symbols in grafitti
 markings. An additional constraint is to use little to no training data, analogous to the
 extremely small amount of evidence typically available to law enforcement officials.
@@ -125,6 +125,13 @@ sequences.
 %    ◦    poor: minimal description, hard to understand/replicate
 %    ◦    acceptable: is specific about what was implemented and explains it well
 %    ◦    exceptional: well written, clear explanations, reproducible: you care about the reader!
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=4cm, width=5cm]{Images/Ambiguity1.png}
+	\label{fig2}
+	\caption{Ambiguity in gesture recognition}
+\end{figure}
+
 Recognizing a unistroke gesture sequence properly is difficult primarily due to
 the nature of the problem, described in the literature as an ``inverse
 perception problem'', which is an acknowledged ``hard problem''
@@ -133,7 +140,9 @@ described by Pizlo, ``is about inferring the properties of the distal stimulus X
 given the proximal stimulus Y'', and the problem is ``ill-conditioned''. A
 feature of an ill-conditioned problem most relevant here is the possibility of
 an infinite number of distal stimuli (intended gesture sequences) that produce
-the proximal stimulus (the 2-D point representation of the gesture sequence).
+the proximal stimulus (the 2-D point representation of the gesture sequence). A feature of the
+inverse perception problem appears in the form of segmentation ambiguity, as
+depicted in Figure 1.
 
 We created a prototype gesture recognizer with two modes of operation: (1) a
 training mode, in which the user selects a gesture and subsequently trains by
@@ -150,25 +159,16 @@ finite length input. A screenshot of the system in recognition mode is shown in 
 	\caption{Recognition GUI}
 \end{figure}
   
-Our approach, at a high level, is to compare the \emph{visual affinity} of an
-input with pre-existing templates. The first step is to match each template
-against a portion of the input in order to identify a ``segmentation point''
-that splits the input into a matched gesture and the remainder. The second step is to remove the
-matched gesture from the input sequence and iterate, repeatedly searching for
-additional gestures in the remainder of the user input. A challenge to designing
-our approach was to account for variability in user input. A feature of the
-inverse perception problem appears in the form of segmentation ambiguity, as
-depicted in Figure 2.
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[height=4cm, width=5cm]{Images/Ambiguity1.png}
-	\label{fig2}
-	\caption{Ambiguity in gesture recognition}
-\end{figure}
-
-In the next section, we present details of our segmentation routine that determines
-the portion of the user's input that matches a template.
+Our approach, at a high level, is to compare the visual similarity of an input
+with pre-existing templates: how similar is each perceived gesture comprising
+the input to a known gesture template? The first step is to match each
+template against a portion of the input in order to identify a ``segmentation
+point'' that splits the input into a matched gesture and the remainder. The
+second step is to remove the matched gesture from the input sequence and
+iterate, repeatedly searching for additional gestures in the remainder of the
+user input. A challenge to designing our approach was to account for variability
+in user input. In the next section, we present details of our segmentation
+routine.
 
 \subsection*{Segmentation}
 
@@ -207,7 +207,7 @@ We look for a better segmentation point (indicated by a smaller score) by
 searching backward and forward from the initial candidate point, repeatedly calculating
 the score. The segmentation point corresponding to the minimal score is marked as the 
 point of segmentation, and the matched gesture is spliced from the input sequence. An example
-of the segmentation points for a unistroke gesture sequence is shown in Figure 1.
+of the segmentation points for a unistroke gesture sequence is shown in Figure 2.
 
 \subsection*{Dynamic Time Warping}
 
