--- a/Revised_Paper/document.tex
+++ b/Revised_Paper/document.tex
@@ -352,7 +352,7 @@ sequences of lengths 2 and 3) for the different recognition phases.
         (10,   70)
     };
 
-      \addplot plot coordinates {
+      \addplot[mark=triangle] plot coordinates {
         (1,     39.66)
         (3,    45)
         (5,   75.66)
